<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2022 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<resources>
    <!-- Keyboard setting strings -->
    <string name="keyboard_settings_title">Advanced keyboard settings</string>

    <string name="keyboard_layout_title">Physical layout</string>

    <string name="keyboard_keymap_custom_title">Custom keymap</string>
    <string name="keyboard_keymap_custom_summary_enabled">Using user customized keymap</string>
    <string name="keyboard_keymap_custom_summary_available">Custom keymap available</string>
    <string name="keyboard_keymap_custom_summary_disabled">No custom keymap available</string>
    <string name="keyboard_keymap_custom_failed">Custom keymap failed to apply</string>

    <string name="keyboard_keymap_spacepower_title">FN + SPACE sends POWER</string>
    <string name="keyboard_keymap_spacepower_summary">Emulate power key with function and space keys</string>

    <string name="keyboard_keymap_fnkeys_title">FN + top row sends F1-F12</string>
    <string name="keyboard_keymap_fnkeys_summary">Emulate F1-F12 keys with function and the top row keys</string>

    <string name="keyboard_keymap_altgr_title">Right FN key sends AltGr</string>
    <string name="keyboard_keymap_altgr_summary">Change right-hand diagonal yellow arrow key to AltGr</string>

    <string name="keyboard_fastpoll_title">Fast poll</string>
    <string name="keyboard_fastpoll_summary">Poll the keyboard at a faster rate (\"Gaming mode\")</string>

    <!-- Touchscreen settings strings -->
    <string name="touchscreen_settings_title">Touchscreen settings</string>
    <string name="touchscreen_settings_summary">Control margin (dead zone)</string>

    <string name="touchscreen_margin_title">Margin</string>
    <string name="touchscreen_margin_summary">Margin level: %d</string>

    <!-- Setup wizard integration -->
    <string name="setupwizard_title">Keyboard settings</string>
    <string name="setupwizard_summary">This device is available with different hardware keyboard layouts.
In order for the device to be able to send the correct keys, please set the actual keyboard layout below.</string>
    <string name="setupwizard_next">Next</string>
</resources>
